sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:3: error: not found: value apresBleu
  apresBleu
  ^DutchFlagAlgo:4: error: not found: value avantBlanc
  avantBlanc
  ^